--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version" : 2,
-    "name" : "test..",
+    "name" : "test",
     "builds" : [
         {
             "src" : "./server.js",
