--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "name" : "test",
     "builds" : [
         {
-            "src" : "./server.js",
+            "src" : "./index.js",
             "use" : "@vercel/node"
         }
     ],
