--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"server": "nodemon backend/server.js",
-		"start": "node backend/server.js",
+		"start": "nodemon backend/server.js",
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"type": "module",
@@ -22,6 +22,6 @@
 		"socket.io": "^4.7.4"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.3"
+		"nodemon": "^3.1.9"
 	}
 }
